add getEmployee api
