# src/Controllers/Employee/index.js
@@ -1,0 +1,3 @@
+const Employee = require('./Employee');
+
+module.exports = Employee;
